Over til java 17, bumper boot, logstash og Vault (#696)
* Over til java 17, bumper boot, logstash
* Bumper spring-boot-starter-parent til 2.6.4 og spring-cloud-vault-dependencies til 3.1.0

Co-authored-by: Espen Waaga <36693523+espenwaaga@users.noreply.github.com>
Co-authored-by: Espen Waaga <espen.waaga@nav.no>