@@ -4,8 +4,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.11.RELEASE</version>
-        <relativePath/>
+        <version>2.6.4</version>
+        <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>no.nav.foreldrepenger</groupId>
@@ -19,7 +19,7 @@
     </licenses>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>17</java.version>
         <sonar.projectKey>navikt_fpinfo-historikk</sonar.projectKey>
         <sonar.organization>navit</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -85,7 +85,6 @@
                     <release>${java.version}</release>
                     <encoding>UTF-8</encoding>
                     <parameters>true</parameters>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -108,7 +107,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- Må ha @{argLine} ellers blir properties satt av jacoco-maven-plugin overkrevet -->
-                    <argLine>@{argLine} --enable-preview</argLine>
+                    <argLine>@{argLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -118,7 +117,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-vault-dependencies</artifactId>
-                <version>2.2.7.RELEASE</version>
+                <version>3.1.0</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -191,7 +190,7 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>6.6</version>
+            <version>7.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
